fix: remove overflow hidden on modal

--- a/stylus/ui-components/modals.styl
+++ b/stylus/ui-components/modals.styl
@@ -48,10 +48,6 @@ $modals
         height            auto
         background-color  white
         color             charcoal-grey
-        // The content of the modal should manage its
-        // overflow settings as overflowing here may
-        // hide the border-radius
-        overflow          hidden
 
         .coz-modal-content:first-child
         .coz-btn-modal-close + .coz-modal-content
